동시성 제어 테스트 수정및 테스트 코드 추가